finished cs182 hw4-ish

--- a/cs240/lab5-src/Makefile
+++ b/cs240/lab5-src/Makefile
@@ -2,7 +2,7 @@
 all: gauss newton
 
 gauss: gauss.c
-	gcc -g -o gauss gauss.c
+	gcc -g -o gauss gauss.c -lm
 
 newton: newton.c
 	gcc -lm -g -o newton newton.c
